W04 - fixing contrast errors

--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -143,7 +143,7 @@ main li {
 }
 
 #updated {
-  color: rgb(208, 206, 186);
+  color: rgb(255, 255, 255, 0.6);
 }
 
 footer {
